--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install pycodestyle
           pycodestyle $(git ls-files "*.py")
+          pycodestyle $(git ls-files "tests/*.py")
   run_code_tests:
     runs-on: ubuntu-latest
     steps:
