--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,3 +34,4 @@ jobs:
           python -m pip install numpy
           conda install numpy
           conda install matplotlib
+          ./run_test.sh
